test/arrays/vass/const-checking.aliases.good
const-checking.aliases.chpl:8: In function 'main':
const-checking.aliases.chpl:10: error: illegal lvalue in assignment
const-checking.aliases.chpl:12: error: illegal lvalue in assignment
const-checking.aliases.chpl:14: error: creating a non-const alias 'aa2' of a const array or domain
const-checking.aliases.chpl:18: error: creating a non-const alias 'dd2' of a const array or domain
const-checking.aliases.chpl:23: error: illegal lvalue in assignment
const-checking.aliases.chpl:24: error: illegal lvalue in assignment
const-checking.aliases.chpl:27: error: illegal lvalue in assignment
const-checking.aliases.chpl:28: error: illegal lvalue in assignment
